--- a/examples/06_composite_environments.ipynb
+++ b/examples/06_composite_environments.ipynb
@@ -387,7 +387,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "8318f6d1",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -425,7 +427,9 @@
   {
    "cell_type": "markdown",
    "id": "5645ce03",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Example 2: Controlling Bridge Connectivity\n",
     "\n",
@@ -1139,6 +1143,243 @@
    "id": "bc460066",
    "metadata": {},
    "source": [
+    "## Example 4: New CompositeEnvironment Methods (v0.1.0)\n",
+    "\n",
+    "In v0.1.0, `CompositeEnvironment` gained full API parity with `Environment` class, including:\n",
+    "- Region queries: `bins_in_region()`, `mask_for_region()`\n",
+    "- Pathfinding: `shortest_path()`\n",
+    "- Diagnostics: `info()`\n",
+    "- Serialization: `save()` and `load()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0eae8f4",
+   "metadata": {},
+   "source": [
+    "### Diagnostic Information with `.info()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "399219b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get comprehensive information about the composite environment\n",
+    "print(\"=== Composite Environment Information ===\\n\")\n",
+    "tmaze_composite.info()\n",
+    "\n",
+    "# You can also get info as a string for logging\n",
+    "info_str = tmaze_composite.info(return_string=True)\n",
+    "# print(info_str)  # Uncomment to see string output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ed6c531",
+   "metadata": {},
+   "source": [
+    "### Region Queries Across Composite\n",
+    "\n",
+    "Region queries work seamlessly across all sub-environments in the composite."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bba70bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add regions to sub-environments - these will be accessible in composite\n",
+    "junction_center = env_junction.bin_centers[len(env_junction.bin_centers) // 2]\n",
+    "env_junction.regions.add(\"junction_center\", point=junction_center.tolist())\n",
+    "\n",
+    "left_goal = env_left.bin_centers[0]\n",
+    "env_left.regions.add(\"left_goal\", point=left_goal.tolist())\n",
+    "\n",
+    "# Recreate composite to include the regions\n",
+    "tmaze_with_regions = CompositeEnvironment(\n",
+    "    subenvs=[env_start, env_junction, env_left, env_right],\n",
+    "    auto_bridge=True,\n",
+    "    max_mnn_distance=6.0,\n",
+    ")\n",
+    "\n",
+    "print(\"Regions available in composite:\")\n",
+    "for region_name in tmaze_with_regions.regions:\n",
+    "    print(f\"  - {region_name}\")\n",
+    "\n",
+    "# Query bins in a specific region\n",
+    "junction_bins = tmaze_with_regions.bins_in_region(\"junction_center\")\n",
+    "print(f\"\\nBins in 'junction_center' region: {len(junction_bins)} bins\")\n",
+    "\n",
+    "# Get boolean mask for a region\n",
+    "junction_mask = tmaze_with_regions.mask_for_region(\"junction_center\")\n",
+    "print(f\"Mask shape: {junction_mask.shape}, True count: {np.sum(junction_mask)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa714f36",
+   "metadata": {},
+   "source": [
+    "### Pathfinding with `.shortest_path()`\n",
+    "\n",
+    "Find the shortest path between any two bins in the composite, even across bridges."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f6e998b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import pairwise for edge iteration (more efficient than zip)\n",
+    "from itertools import pairwise\n",
+    "\n",
+    "# Find path from start to right arm (crosses bridges through junction)\n",
+    "source_bin = 0  # First bin in start box\n",
+    "target_bin = tmaze_with_regions.n_bins - 5  # Bin in right arm\n",
+    "\n",
+    "path = tmaze_with_regions.shortest_path(source_bin, target_bin)\n",
+    "\n",
+    "if path:\n",
+    "    print(f\"\\nShortest path from bin {source_bin} to bin {target_bin}:\")\n",
+    "    print(f\"  Path length: {len(path)} bins\")\n",
+    "    print(\"  Path traverses: \", end=\"\")\n",
+    "\n",
+    "    # Identify which sub-environments the path crosses\n",
+    "    start_n_bins = env_start.n_bins\n",
+    "    junction_n_bins = env_junction.n_bins\n",
+    "    left_n_bins = env_left.n_bins\n",
+    "\n",
+    "    in_start = any(b < start_n_bins for b in path)\n",
+    "    in_junction = any(start_n_bins <= b < start_n_bins + junction_n_bins for b in path)\n",
+    "    in_left = any(\n",
+    "        start_n_bins + junction_n_bins\n",
+    "        <= b\n",
+    "        < start_n_bins + junction_n_bins + left_n_bins\n",
+    "        for b in path\n",
+    "    )\n",
+    "    in_right = any(b >= start_n_bins + junction_n_bins + left_n_bins for b in path)\n",
+    "\n",
+    "    compartments = []\n",
+    "    if in_start:\n",
+    "        compartments.append(\"Start\")\n",
+    "    if in_junction:\n",
+    "        compartments.append(\"Junction\")\n",
+    "    if in_left:\n",
+    "        compartments.append(\"Left\")\n",
+    "    if in_right:\n",
+    "        compartments.append(\"Right\")\n",
+    "\n",
+    "    print(\" → \".join(compartments))\n",
+    "\n",
+    "    # Calculate total path distance using pairwise iteration\n",
+    "    total_distance = sum(\n",
+    "        tmaze_with_regions.connectivity[u][v][\"distance\"] for u, v in pairwise(path)\n",
+    "    )\n",
+    "    print(f\"  Total distance: {total_distance:.2f} units\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b77c86e9",
+   "metadata": {},
+   "source": [
+    "### Pathfinding Example: No Path Between Disconnected Components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d21409",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "\n",
+    "# Create a composite without bridges to demonstrate warning\n",
+    "disconnected_composite = CompositeEnvironment(\n",
+    "    subenvs=[arena_a, arena_b], auto_bridge=False\n",
+    ")\n",
+    "\n",
+    "# Try to find path between disconnected sub-environments\n",
+    "source = 0  # In arena_a\n",
+    "target = arena_a.n_bins + 5  # In arena_b\n",
+    "\n",
+    "with warnings.catch_warnings(record=True) as w:\n",
+    "    warnings.simplefilter(\"always\")\n",
+    "    path = disconnected_composite.shortest_path(source, target)\n",
+    "    if len(w) > 0:\n",
+    "        print(f\"⚠ Warning captured: {w[0].message}\")\n",
+    "\n",
+    "print(f\"Path result: {path} (empty list indicates no path exists)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6f695d7",
+   "metadata": {},
+   "source": [
+    "### Saving and Loading Composite Environments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf632dcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tempfile\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Save composite environment to file\n",
+    "with tempfile.TemporaryDirectory() as tmpdir:\n",
+    "    filepath = Path(tmpdir) / \"my_composite_env.pkl\"\n",
+    "\n",
+    "    # Save\n",
+    "    tmaze_with_regions.save(str(filepath))\n",
+    "    print(f\"Saved composite to: {filepath}\")\n",
+    "    print(f\"File size: {filepath.stat().st_size / 1024:.2f} KB\")\n",
+    "\n",
+    "    # Load\n",
+    "    loaded_composite = CompositeEnvironment.load(str(filepath))\n",
+    "\n",
+    "    # Verify loaded composite matches original\n",
+    "    print(\"\\nVerifying loaded composite:\")\n",
+    "    print(\n",
+    "        f\"  n_bins: {loaded_composite.n_bins} (original: {tmaze_with_regions.n_bins})\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"  n_dims: {loaded_composite.n_dims} (original: {tmaze_with_regions.n_dims})\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"  n_sub_envs: {len(loaded_composite._subenvs_info)} (original: {len(tmaze_with_regions._subenvs_info)})\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"  n_bridges: {len(loaded_composite._bridge_list)} (original: {len(tmaze_with_regions._bridge_list)})\"\n",
+    "    )\n",
+    "    print(f\"  Regions preserved: {list(loaded_composite.regions.keys())}\")\n",
+    "\n",
+    "    # Test that loaded composite works\n",
+    "    test_points = np.array([[5.0, 5.0]])\n",
+    "    bins_loaded = loaded_composite.bin_at(test_points)\n",
+    "    bins_original = tmaze_with_regions.bin_at(test_points)\n",
+    "    print(f\"  bin_at() test: loaded={bins_loaded[0]}, original={bins_original[0]}\")\n",
+    "\n",
+    "    print(\"\\n✓ Save/load preserves all composite structure and functionality\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d3f68e1",
+   "metadata": {},
+   "source": [
     "## Key Takeaways\n",
     "\n",
     "Congratulations! You now understand composite environments in neurospatial:\n",
@@ -1149,7 +1390,12 @@
     "\n",
     "3. **`max_mnn_distance` parameter** controls which environments connect (None = no limit)\n",
     "\n",
-    "4. **Same API as Environment**: Use `bin_at()`, `distance_between()`, `shortest_path()`, etc.\n",
+    "4. **Full API parity with Environment** (v0.1.0):\n",
+    "   - Spatial queries: `bin_at()`, `distance_between()`, `contains()`\n",
+    "   - Region queries: `bins_in_region()`, `mask_for_region()`\n",
+    "   - Pathfinding: `shortest_path()` (works across bridges!)\n",
+    "   - Diagnostics: `info()` (shows composite structure and bridge stats)\n",
+    "   - Serialization: `save()` and `load()` (persist composite environments)\n",
     "\n",
     "5. **Use cases**:\n",
     "   - Multi-room experiments\n",
@@ -1162,6 +1408,8 @@
     "   - Check connectivity after creation (`nx.is_connected()`)\n",
     "   - Tune `max_mnn_distance` based on your spatial scale\n",
     "   - Visualize bridges to verify expected connections\n",
+    "   - Use `info()` to inspect composite structure\n",
+    "   - Save composites to avoid re-computing bridges\n",
     "\n",
     "## Next Steps\n",
     "\n",
