Revise spatial analysis docs and update example notebooks
Comprehensively updated spatial-analysis documentation: fixed 10 API signatures, added scientific context ('Why This Matters') for key operations, standardized terminology, and improved the quick reference table. Reorganized the complete workflow notebook to integrate movement and navigation analysis as a core step, updated navigation in mkdocs.yml and user-guide/index.md, and verified all changes through review and successful documentation builds.

--- a/docs/examples/08_complete_workflow.ipynb
+++ b/docs/examples/08_complete_workflow.ipynb
@@ -1411,19 +1411,23 @@
    "source": [
     "# Compute transition matrix using the built-in method\n",
     "# This counts how often the animal moves from one bin to another\n",
-    "transitions_raw = env.transitions(times=timestamps, positions=position_data, normalize=False)\n",
-    "transitions_prob = env.transitions(times=timestamps, positions=position_data, normalize=True)\n",
+    "transitions_raw = env.transitions(\n",
+    "    times=timestamps, positions=position_data, normalize=False\n",
+    ")\n",
+    "transitions_prob = env.transitions(\n",
+    "    times=timestamps, positions=position_data, normalize=True\n",
+    ")\n",
     "\n",
-    "print(f\"\\nTransition Matrix:\")\n",
+    "print(\"\\nTransition Matrix:\")\n",
     "print(f\"  Shape: {transitions_raw.shape}\")\n",
     "print(f\"  Total transitions: {transitions_raw.nnz}\")\n",
-    "print(f\"  Sparsity: {100 * (1 - transitions_raw.nnz / (env.n_bins ** 2)):.1f}%\")\n",
+    "print(f\"  Sparsity: {100 * (1 - transitions_raw.nnz / (env.n_bins**2)):.1f}%\")\n",
     "\n",
     "# Find most common transitions\n",
     "transitions_dense = transitions_prob.toarray()\n",
     "max_prob = np.max(transitions_dense)\n",
     "max_idx = np.unravel_index(np.argmax(transitions_dense), transitions_dense.shape)\n",
-    "print(f\"\\nMost common transition:\")\n",
+    "print(\"\\nMost common transition:\")\n",
     "print(f\"  Bin {max_idx[0]} → Bin {max_idx[1]}\")\n",
     "print(f\"  Probability: {max_prob:.3f}\")\n",
     "print(f\"  Position: {env.bin_centers[max_idx[0]]} → {env.bin_centers[max_idx[1]]}\")"
@@ -1442,18 +1446,27 @@
     "fig, axes = plt.subplots(1, 2, figsize=(18, 8))\n",
     "\n",
     "# Raw counts\n",
-    "im1 = axes[0].imshow(transitions_raw.toarray(), cmap='hot', interpolation='nearest', aspect='auto')\n",
-    "axes[0].set_xlabel('To Bin')\n",
-    "axes[0].set_ylabel('From Bin')\n",
-    "axes[0].set_title('Transition Counts')\n",
-    "plt.colorbar(im1, ax=axes[0], label='Count')\n",
+    "im1 = axes[0].imshow(\n",
+    "    transitions_raw.toarray(), cmap=\"hot\", interpolation=\"nearest\", aspect=\"auto\"\n",
+    ")\n",
+    "axes[0].set_xlabel(\"To Bin\")\n",
+    "axes[0].set_ylabel(\"From Bin\")\n",
+    "axes[0].set_title(\"Transition Counts\")\n",
+    "plt.colorbar(im1, ax=axes[0], label=\"Count\")\n",
     "\n",
     "# Normalized probabilities\n",
-    "im2 = axes[1].imshow(transitions_dense, cmap='hot', interpolation='nearest', aspect='auto', vmin=0, vmax=0.5)\n",
-    "axes[1].set_xlabel('To Bin')\n",
-    "axes[1].set_ylabel('From Bin')\n",
-    "axes[1].set_title('Transition Probabilities')\n",
-    "plt.colorbar(im2, ax=axes[1], label='Probability')\n",
+    "im2 = axes[1].imshow(\n",
+    "    transitions_dense,\n",
+    "    cmap=\"hot\",\n",
+    "    interpolation=\"nearest\",\n",
+    "    aspect=\"auto\",\n",
+    "    vmin=0,\n",
+    "    vmax=0.5,\n",
+    ")\n",
+    "axes[1].set_xlabel(\"To Bin\")\n",
+    "axes[1].set_ylabel(\"From Bin\")\n",
+    "axes[1].set_title(\"Transition Probabilities\")\n",
+    "plt.colorbar(im2, ax=axes[1], label=\"Probability\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -1480,12 +1493,15 @@
     "\n",
     "    return entropy\n",
     "\n",
+    "\n",
     "transition_entropy = compute_transition_entropy(transitions_prob)\n",
     "\n",
-    "print(f\"\\nTransition Entropy:\")\n",
+    "print(\"\\nTransition Entropy:\")\n",
     "print(f\"  Mean: {transition_entropy[transition_entropy > 0].mean():.2f} bits\")\n",
     "print(f\"  Max: {transition_entropy.max():.2f} bits (most random movement)\")\n",
-    "print(f\"  Min: {transition_entropy[transition_entropy > 0].min():.2f} bits (most stereotyped)\")\n",
+    "print(\n",
+    "    f\"  Min: {transition_entropy[transition_entropy > 0].min():.2f} bits (most stereotyped)\"\n",
+    ")\n",
     "\n",
     "# Visualize entropy\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
@@ -1494,15 +1510,17 @@
     "    env.bin_centers[:, 1],\n",
     "    c=transition_entropy,\n",
     "    s=200,\n",
-    "    cmap='viridis',\n",
-    "    edgecolors='black',\n",
-    "    linewidth=0.5\n",
+    "    cmap=\"viridis\",\n",
+    "    edgecolors=\"black\",\n",
+    "    linewidth=0.5,\n",
     ")\n",
-    "plt.colorbar(scatter, ax=ax, label='Transition Entropy (bits)')\n",
-    "ax.set_xlabel('X position (cm)')\n",
-    "ax.set_ylabel('Y position (cm)')\n",
-    "ax.set_title('Movement Randomness\\n(High = many transition options, Low = stereotyped paths)')\n",
-    "ax.set_aspect('equal')\n",
+    "plt.colorbar(scatter, ax=ax, label=\"Transition Entropy (bits)\")\n",
+    "ax.set_xlabel(\"X position (cm)\")\n",
+    "ax.set_ylabel(\"Y position (cm)\")\n",
+    "ax.set_title(\n",
+    "    \"Movement Randomness\\n(High = many transition options, Low = stereotyped paths)\"\n",
+    ")\n",
+    "ax.set_aspect(\"equal\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -1526,7 +1544,7 @@
     "# This is useful for detecting runs (consecutive time in same location)\n",
     "bin_sequence = env.bin_sequence(timestamps, position_data)\n",
     "\n",
-    "print(f\"\\nBin Sequence Analysis:\")\n",
+    "print(\"\\nBin Sequence Analysis:\")\n",
     "print(f\"  Total samples: {len(position_data)}\")\n",
     "print(f\"  Valid bin assignments: {len(bin_sequence)}\")\n",
     "print(f\"  First 20 bins visited: {bin_sequence[:20]}\")\n",
@@ -1540,7 +1558,7 @@
     "run_durations_samples = run_ends - run_starts\n",
     "run_durations_time = run_durations_samples / 30.0  # Convert to seconds\n",
     "\n",
-    "print(f\"\\nRun Statistics:\")\n",
+    "print(\"\\nRun Statistics:\")\n",
     "print(f\"  Total runs: {len(run_starts)}\")\n",
     "print(f\"  Mean run duration: {run_durations_time.mean():.2f} seconds\")\n",
     "print(f\"  Median run duration: {np.median(run_durations_time):.2f} seconds\")\n",
@@ -1549,7 +1567,7 @@
     "# Find longest run\n",
     "longest_idx = np.argmax(run_durations_time)\n",
     "longest_bin = run_bins[longest_idx]\n",
-    "print(f\"\\nLongest run:\")\n",
+    "print(\"\\nLongest run:\")\n",
     "print(f\"  Bin: {longest_bin}\")\n",
     "print(f\"  Position: {env.bin_centers[longest_bin]}\")\n",
     "print(f\"  Duration: {run_durations_time[longest_idx]:.2f} seconds\")"
@@ -1566,14 +1584,19 @@
     "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
     "\n",
     "# Histogram of run durations\n",
-    "axes[0].hist(run_durations_time, bins=50, edgecolor='black', alpha=0.7)\n",
-    "axes[0].set_xlabel('Run Duration (seconds)')\n",
-    "axes[0].set_ylabel('Count')\n",
-    "axes[0].set_title('Distribution of Run Durations')\n",
-    "axes[0].axvline(run_durations_time.mean(), color='red', linestyle='--',\n",
-    "                linewidth=2, label=f'Mean = {run_durations_time.mean():.2f}s')\n",
+    "axes[0].hist(run_durations_time, bins=50, edgecolor=\"black\", alpha=0.7)\n",
+    "axes[0].set_xlabel(\"Run Duration (seconds)\")\n",
+    "axes[0].set_ylabel(\"Count\")\n",
+    "axes[0].set_title(\"Distribution of Run Durations\")\n",
+    "axes[0].axvline(\n",
+    "    run_durations_time.mean(),\n",
+    "    color=\"red\",\n",
+    "    linestyle=\"--\",\n",
+    "    linewidth=2,\n",
+    "    label=f\"Mean = {run_durations_time.mean():.2f}s\",\n",
+    ")\n",
     "axes[0].legend()\n",
-    "axes[0].grid(True, alpha=0.3, axis='y')\n",
+    "axes[0].grid(True, alpha=0.3, axis=\"y\")\n",
     "\n",
     "# Mean run duration per bin\n",
     "mean_duration_per_bin = np.zeros(env.n_bins)\n",
@@ -1587,16 +1610,16 @@
     "    env.bin_centers[:, 1],\n",
     "    c=mean_duration_per_bin,\n",
     "    s=200,\n",
-    "    cmap='plasma',\n",
-    "    edgecolors='black',\n",
+    "    cmap=\"plasma\",\n",
+    "    edgecolors=\"black\",\n",
     "    linewidth=0.5,\n",
-    "    vmin=0\n",
+    "    vmin=0,\n",
     ")\n",
-    "plt.colorbar(scatter, ax=axes[1], label='Mean Run Duration (s)')\n",
-    "axes[1].set_xlabel('X position (cm)')\n",
-    "axes[1].set_ylabel('Y position (cm)')\n",
-    "axes[1].set_title('Average Time Spent Per Visit')\n",
-    "axes[1].set_aspect('equal')\n",
+    "plt.colorbar(scatter, ax=axes[1], label=\"Mean Run Duration (s)\")\n",
+    "axes[1].set_xlabel(\"X position (cm)\")\n",
+    "axes[1].set_ylabel(\"Y position (cm)\")\n",
+    "axes[1].set_title(\"Average Time Spent Per Visit\")\n",
+    "axes[1].set_aspect(\"equal\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -1621,29 +1644,29 @@
     "# This is useful for analyzing goal-directed behavior\n",
     "\n",
     "# North reward location\n",
-    "north_reward = env.regions['north_reward'].data\n",
+    "north_reward = env.regions[\"north_reward\"].data\n",
     "north_reward_bin = env.bin_at(north_reward.reshape(1, -1))[0]\n",
     "\n",
     "# Compute distance field using the built-in method\n",
     "# distance_to() requires targets as a sequence (list, tuple, or array)\n",
-    "distances_to_north = env.distance_to([north_reward_bin], metric='geodesic')\n",
+    "distances_to_north = env.distance_to([north_reward_bin], metric=\"geodesic\")\n",
     "\n",
     "# Also compute Euclidean for comparison\n",
-    "distances_euclidean = env.distance_to([north_reward_bin], metric='euclidean')\n",
+    "distances_euclidean = env.distance_to([north_reward_bin], metric=\"euclidean\")\n",
     "\n",
-    "print(f\"\\nDistance Field Analysis:\")\n",
+    "print(\"\\nDistance Field Analysis:\")\n",
     "print(f\"  North reward bin: {north_reward_bin}\")\n",
     "print(f\"  North reward position: {north_reward}\")\n",
-    "print(f\"\\nGeodesic distances:\")\n",
+    "print(\"\\nGeodesic distances:\")\n",
     "print(f\"  Mean: {distances_to_north[np.isfinite(distances_to_north)].mean():.2f} cm\")\n",
     "print(f\"  Max: {distances_to_north[np.isfinite(distances_to_north)].max():.2f} cm\")\n",
-    "print(f\"\\nEuclidean distances:\")\n",
+    "print(\"\\nEuclidean distances:\")\n",
     "print(f\"  Mean: {distances_euclidean.mean():.2f} cm\")\n",
     "print(f\"  Max: {distances_euclidean.max():.2f} cm\")\n",
     "\n",
     "# Compute ratio (measures path complexity)\n",
     "ratio = distances_to_north / distances_euclidean\n",
-    "print(f\"\\nGeodesic/Euclidean ratio:\")\n",
+    "print(\"\\nGeodesic/Euclidean ratio:\")\n",
     "print(f\"  Mean: {ratio[np.isfinite(ratio)].mean():.2f}\")\n",
     "print(f\"  Max: {ratio[np.isfinite(ratio)].max():.2f}\")"
    ]
@@ -1664,18 +1687,26 @@
     "    env.bin_centers[:, 1],\n",
     "    c=distances_euclidean,\n",
     "    s=150,\n",
-    "    cmap='viridis',\n",
-    "    edgecolors='black',\n",
-    "    linewidth=0.3\n",
+    "    cmap=\"viridis\",\n",
+    "    edgecolors=\"black\",\n",
+    "    linewidth=0.3,\n",
     ")\n",
-    "axes[0].scatter(*north_reward, c='red', s=400, marker='*',\n",
-    "                edgecolors='white', linewidth=2, label='North Reward', zorder=10)\n",
-    "axes[0].set_xlabel('X position (cm)')\n",
-    "axes[0].set_ylabel('Y position (cm)')\n",
-    "axes[0].set_title('Euclidean Distance to Reward')\n",
-    "axes[0].set_aspect('equal')\n",
+    "axes[0].scatter(\n",
+    "    *north_reward,\n",
+    "    c=\"red\",\n",
+    "    s=400,\n",
+    "    marker=\"*\",\n",
+    "    edgecolors=\"white\",\n",
+    "    linewidth=2,\n",
+    "    label=\"North Reward\",\n",
+    "    zorder=10,\n",
+    ")\n",
+    "axes[0].set_xlabel(\"X position (cm)\")\n",
+    "axes[0].set_ylabel(\"Y position (cm)\")\n",
+    "axes[0].set_title(\"Euclidean Distance to Reward\")\n",
+    "axes[0].set_aspect(\"equal\")\n",
     "axes[0].legend()\n",
-    "plt.colorbar(scatter1, ax=axes[0], label='Distance (cm)')\n",
+    "plt.colorbar(scatter1, ax=axes[0], label=\"Distance (cm)\")\n",
     "\n",
     "# Geodesic distance\n",
     "scatter2 = axes[1].scatter(\n",
@@ -1683,18 +1714,26 @@
     "    env.bin_centers[:, 1],\n",
     "    c=distances_to_north,\n",
     "    s=150,\n",
-    "    cmap='viridis',\n",
-    "    edgecolors='black',\n",
-    "    linewidth=0.3\n",
+    "    cmap=\"viridis\",\n",
+    "    edgecolors=\"black\",\n",
+    "    linewidth=0.3,\n",
     ")\n",
-    "axes[1].scatter(*north_reward, c='red', s=400, marker='*',\n",
-    "                edgecolors='white', linewidth=2, label='North Reward', zorder=10)\n",
-    "axes[1].set_xlabel('X position (cm)')\n",
-    "axes[1].set_ylabel('Y position (cm)')\n",
-    "axes[1].set_title('Geodesic Distance to Reward\\n(Through Environment)')\n",
-    "axes[1].set_aspect('equal')\n",
+    "axes[1].scatter(\n",
+    "    *north_reward,\n",
+    "    c=\"red\",\n",
+    "    s=400,\n",
+    "    marker=\"*\",\n",
+    "    edgecolors=\"white\",\n",
+    "    linewidth=2,\n",
+    "    label=\"North Reward\",\n",
+    "    zorder=10,\n",
+    ")\n",
+    "axes[1].set_xlabel(\"X position (cm)\")\n",
+    "axes[1].set_ylabel(\"Y position (cm)\")\n",
+    "axes[1].set_title(\"Geodesic Distance to Reward\\n(Through Environment)\")\n",
+    "axes[1].set_aspect(\"equal\")\n",
     "axes[1].legend()\n",
-    "plt.colorbar(scatter2, ax=axes[1], label='Distance (cm)')\n",
+    "plt.colorbar(scatter2, ax=axes[1], label=\"Distance (cm)\")\n",
     "\n",
     "# Ratio (path complexity)\n",
     "scatter3 = axes[2].scatter(\n",
@@ -1702,20 +1741,28 @@
     "    env.bin_centers[:, 1],\n",
     "    c=ratio,\n",
     "    s=150,\n",
-    "    cmap='RdYlGn_r',\n",
-    "    edgecolors='black',\n",
+    "    cmap=\"RdYlGn_r\",\n",
+    "    edgecolors=\"black\",\n",
     "    linewidth=0.3,\n",
     "    vmin=1.0,\n",
-    "    vmax=2.0\n",
+    "    vmax=2.0,\n",
     ")\n",
-    "axes[2].scatter(*north_reward, c='red', s=400, marker='*',\n",
-    "                edgecolors='white', linewidth=2, label='North Reward', zorder=10)\n",
-    "axes[2].set_xlabel('X position (cm)')\n",
-    "axes[2].set_ylabel('Y position (cm)')\n",
-    "axes[2].set_title('Path Complexity\\n(Geodesic/Euclidean Ratio)')\n",
-    "axes[2].set_aspect('equal')\n",
+    "axes[2].scatter(\n",
+    "    *north_reward,\n",
+    "    c=\"red\",\n",
+    "    s=400,\n",
+    "    marker=\"*\",\n",
+    "    edgecolors=\"white\",\n",
+    "    linewidth=2,\n",
+    "    label=\"North Reward\",\n",
+    "    zorder=10,\n",
+    ")\n",
+    "axes[2].set_xlabel(\"X position (cm)\")\n",
+    "axes[2].set_ylabel(\"Y position (cm)\")\n",
+    "axes[2].set_title(\"Path Complexity\\n(Geodesic/Euclidean Ratio)\")\n",
+    "axes[2].set_aspect(\"equal\")\n",
     "axes[2].legend()\n",
-    "plt.colorbar(scatter3, ax=axes[2], label='Ratio')\n",
+    "plt.colorbar(scatter3, ax=axes[2], label=\"Ratio\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -1748,27 +1795,38 @@
     "\n",
     "# Bin distance field into ranges\n",
     "distance_bins = [0, 20, 40, 60, 100]\n",
-    "distance_labels = ['0-20 cm', '20-40 cm', '40-60 cm', '>60 cm']\n",
+    "distance_labels = [\"0-20 cm\", \"20-40 cm\", \"40-60 cm\", \">60 cm\"]\n",
     "\n",
     "mean_rate_by_distance = []\n",
     "for i in range(len(distance_bins) - 1):\n",
-    "    mask = (distances_to_north >= distance_bins[i]) & (distances_to_north < distance_bins[i+1])\n",
+    "    mask = (distances_to_north >= distance_bins[i]) & (\n",
+    "        distances_to_north < distance_bins[i + 1]\n",
+    "    )\n",
     "    if mask.any():\n",
     "        rates_in_range = neuron_firing_rate[mask]\n",
-    "        mean_rate_by_distance.append(rates_in_range[rates_in_range > 0].mean() if (rates_in_range > 0).any() else 0)\n",
+    "        mean_rate_by_distance.append(\n",
+    "            rates_in_range[rates_in_range > 0].mean()\n",
+    "            if (rates_in_range > 0).any()\n",
+    "            else 0\n",
+    "        )\n",
     "    else:\n",
     "        mean_rate_by_distance.append(0)\n",
     "\n",
     "# Plot\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
-    "ax.bar(range(len(distance_labels)), mean_rate_by_distance,\n",
-    "       color='steelblue', edgecolor='black', alpha=0.7)\n",
+    "ax.bar(\n",
+    "    range(len(distance_labels)),\n",
+    "    mean_rate_by_distance,\n",
+    "    color=\"steelblue\",\n",
+    "    edgecolor=\"black\",\n",
+    "    alpha=0.7,\n",
+    ")\n",
     "ax.set_xticks(range(len(distance_labels)))\n",
     "ax.set_xticklabels(distance_labels)\n",
-    "ax.set_xlabel('Distance to North Reward')\n",
-    "ax.set_ylabel('Mean Firing Rate (Hz)')\n",
-    "ax.set_title(f'Neuron {best_neuron}: Firing Rate vs Distance to Goal')\n",
-    "ax.grid(True, alpha=0.3, axis='y')\n",
+    "ax.set_xlabel(\"Distance to North Reward\")\n",
+    "ax.set_ylabel(\"Mean Firing Rate (Hz)\")\n",
+    "ax.set_title(f\"Neuron {best_neuron}: Firing Rate vs Distance to Goal\")\n",
+    "ax.grid(True, alpha=0.3, axis=\"y\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
