fix(lint): resolve ruff errors in example notebook
- Rename T_normalized -> t_normalized (lowercase)
- Rename T_dense -> t_dense (lowercase)
- Add strict=True to zip() call

Fixes CI test failures for v0.2.0 release.

--- a/docs/examples/08_complete_workflow.ipynb
+++ b/docs/examples/08_complete_workflow.ipynb
@@ -1498,13 +1498,13 @@
    "outputs": [],
    "source": [
     "# Compute transition entropy (measure of movement randomness)\n",
-    "def compute_transition_entropy(T_normalized):\n",
+    "def compute_transition_entropy(t_normalized):\n",
     "    \"\"\"Shannon entropy of transition probabilities for each bin.\"\"\"\n",
-    "    T_dense = T_normalized.toarray()\n",
+    "    t_dense = t_normalized.toarray()\n",
     "    entropy = np.zeros(env.n_bins)\n",
     "\n",
     "    for i in range(env.n_bins):\n",
-    "        row = T_dense[i]\n",
+    "        row = t_dense[i]\n",
     "        p = row[row > 0]  # Only non-zero probabilities\n",
     "        if len(p) > 0:\n",
     "            entropy[i] = -np.sum(p * np.log2(p))\n",
@@ -1849,7 +1849,7 @@
     "plt.show()\n",
     "\n",
     "print(f\"\\nNeuron {best_neuron} activity by distance to north reward:\")\n",
-    "for label, rate in zip(distance_labels, mean_rate_by_distance):\n",
+    "for label, rate in zip(distance_labels, mean_rate_by_distance, strict=True):\n",
     "    print(f\"  {label}: {rate:.2f} Hz\")"
    ]
   },
