Update notebook outputs and execution counts
Refreshed execution counts and outputs in introduction, regions of interest, track linearization, and composite environments example notebooks. Added new printed output and region/path information to composite environments notebook for improved clarity and demonstration.

--- a/examples/06_composite_environments.ipynb
+++ b/examples/06_composite_environments.ipynb
@@ -1162,10 +1162,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "399219b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Composite Environment Information ===\n",
+      "\n",
+      "Composite Environment Information\n",
+      "==================================================\n",
+      "Number of sub-environments: 4\n",
+      "Total bins: 217\n",
+      "Dimensions: 2\n",
+      "Bridge edges: 28\n",
+      "\n",
+      "Sub-Environment Details:\n",
+      "--------------------------------------------------\n",
+      "  [0] StartBox\n",
+      "      Type: RegularGrid\n",
+      "      Bins: 55 (composite indices: 0-54)\n",
+      "      Regions: 0\n",
+      "  [1] Junction\n",
+      "      Type: RegularGrid\n",
+      "      Bins: 32 (composite indices: 55-86)\n",
+      "      Regions: 0\n",
+      "  [2] LeftArm\n",
+      "      Type: RegularGrid\n",
+      "      Bins: 65 (composite indices: 87-151)\n",
+      "      Regions: 0\n",
+      "  [3] RightArm\n",
+      "      Type: RegularGrid\n",
+      "      Bins: 65 (composite indices: 152-216)\n",
+      "      Regions: 0\n",
+      "\n",
+      "Bridge Statistics:\n",
+      "--------------------------------------------------\n",
+      "  Count: 28\n",
+      "  Min distance: 0.2646\n",
+      "  Max distance: 1.4276\n",
+      "  Mean distance: 0.8721\n",
+      "\n",
+      "Composite Regions:\n",
+      "--------------------------------------------------\n",
+      "  - LeftChoice: point\n",
+      "  - RightChoice: point\n",
+      "  - StartPoint: point\n"
+     ]
+    }
+   ],
    "source": [
     "# Get comprehensive information about the composite environment\n",
     "print(\"=== Composite Environment Information ===\\n\")\n",
@@ -1188,10 +1235,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6bba70bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regions available in composite:\n",
+      "  - junction_center\n",
+      "  - left_goal\n",
+      "\n",
+      "Bins in 'junction_center' region: 1 bins\n",
+      "Mask shape: (217,), True count: 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Add regions to sub-environments - these will be accessible in composite\n",
     "junction_center = env_junction.bin_centers[len(env_junction.bin_centers) // 2]\n",
@@ -1232,10 +1292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "4f6e998b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Shortest path from bin 0 to bin 212:\n",
+      "  Path length: 24 bins\n",
+      "  Path traverses: Start → Junction → Right\n",
+      "  Total distance: 68.80 units\n"
+     ]
+    }
+   ],
    "source": [
     "# Import pairwise for edge iteration (more efficient than zip)\n",
     "from itertools import pairwise\n",
@@ -1295,10 +1367,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "33d21409",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠ Warning captured: No path found between bin 0 and bin 85. The bins may be in disconnected components. Returning empty path.\n",
+      "Path result: [] (empty list indicates no path exists)\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "\n",
@@ -1330,10 +1411,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "bf632dcc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved composite to: /var/folders/86/m147b4k17lddvs_xsw0mj2zw0000gn/T/tmpubfcaj61/my_composite_env.pkl\n",
+      "File size: 110.04 KB\n",
+      "\n",
+      "Verifying loaded composite:\n",
+      "  n_bins: 217 (original: 217)\n",
+      "  n_dims: 2 (original: 2)\n",
+      "  n_sub_envs: 4 (original: 4)\n",
+      "  n_bridges: 28 (original: 28)\n",
+      "  Regions preserved: ['junction_center', 'left_goal']\n",
+      "  bin_at() test: loaded=-1, original=-1\n",
+      "\n",
+      "✓ Save/load preserves all composite structure and functionality\n"
+     ]
+    }
+   ],
    "source": [
     "import tempfile\n",
     "from pathlib import Path\n",
