Update and reorganize example notebooks
Removed outdated Python and notebook examples, added new and updated Jupyter notebooks for spike field, place field, boundary cell, trajectory, and behavioral segmentation analyses. Renamed differential operators and signal processing notebooks for improved sequence and clarity.

--- a/examples/09_differential_operators.ipynb
+++ b/examples/09_differential_operators.ipynb
@@ -88,26 +88,56 @@
     }
    ],
    "source": [
-    "# Generate synthetic 2D trajectory\n",
-    "n_points = 1000\n",
-    "t = np.linspace(0, 4 * np.pi, n_points)\n",
+    "# Generate 2D random walk in open field arena\n",
+    "sampling_rate = 30.0  # Hz\n",
+    "duration = 60.0  # seconds\n",
+    "n_samples = int(duration * sampling_rate)\n",
     "\n",
-    "# Create a meandering trajectory\n",
-    "x = 50 * np.cos(t) + 50 + 10 * np.cos(5 * t)\n",
-    "y = 50 * np.sin(t) + 50 + 10 * np.sin(5 * t)\n",
+    "# Arena size: 100x100 cm open field\n",
+    "arena_size = 100.0  # cm\n",
+    "arena_center = arena_size / 2\n",
     "\n",
-    "trajectory = np.column_stack([x, y])\n",
+    "# Random walk parameters\n",
+    "step_size = 2.5  # cm per step\n",
+    "boundary_margin = 5.0  # cm from walls\n",
     "\n",
-    "# Create environment\n",
+    "# Initialize trajectory\n",
+    "trajectory = np.zeros((n_samples, 2))\n",
+    "trajectory[0] = [arena_center, arena_center]  # Start at center\n",
+    "\n",
+    "# Generate random walk with wall reflection\n",
+    "for i in range(1, n_samples):\n",
+    "    # Random step direction\n",
+    "    angle = np.random.uniform(0, 2 * np.pi)\n",
+    "    step = step_size * np.array([np.cos(angle), np.sin(angle)])\n",
+    "\n",
+    "    # Propose new position\n",
+    "    new_pos = trajectory[i - 1] + step\n",
+    "\n",
+    "    # Reflect at boundaries (with margin)\n",
+    "    for dim in range(2):\n",
+    "        if new_pos[dim] < boundary_margin:\n",
+    "            new_pos[dim] = boundary_margin + (boundary_margin - new_pos[dim])\n",
+    "        elif new_pos[dim] > (arena_size - boundary_margin):\n",
+    "            new_pos[dim] = (arena_size - boundary_margin) - (\n",
+    "                new_pos[dim] - (arena_size - boundary_margin)\n",
+    "            )\n",
+    "\n",
+    "    trajectory[i] = new_pos\n",
+    "\n",
+    "# Create environment with 5 cm bins\n",
     "env = Environment.from_samples(trajectory, bin_size=5.0)\n",
     "env.units = \"cm\"\n",
     "env.frame = \"arena\"\n",
     "\n",
     "print(\"Environment created:\")\n",
+    "print(f\"  Arena: {arena_size:.0f}x{arena_size:.0f} cm open field\")\n",
     "print(f\"  Bins: {env.n_bins}\")\n",
     "print(f\"  Edges: {env.connectivity.number_of_edges()}\")\n",
     "print(f\"  Dimensions: {env.n_dims}D\")\n",
-    "print(f\"  Extent: {env.dimension_ranges}\")"
+    "print(\n",
+    "    f\"  Spatial coverage: X=[{trajectory[:, 0].min():.1f}, {trajectory[:, 0].max():.1f}], Y=[{trajectory[:, 1].min():.1f}, {trajectory[:, 1].max():.1f}] cm\"\n",
+    ")"
    ]
   },
   {
@@ -176,7 +206,7 @@
     "distances = distance_field(env.connectivity, sources=[goal_bin])\n",
     "\n",
     "# Compute gradient (edge field)\n",
-    "grad_distances = gradient(distances, env)\n",
+    "grad_distances = gradient(env, distances)\n",
     "\n",
     "print(f\"Distance field shape: {distances.shape}  (scalar field, n_bins)\")\n",
     "print(f\"Gradient shape: {grad_distances.shape}  (edge field, n_edges)\")\n",
@@ -373,7 +403,7 @@
     "goal_directed_flow = -grad_distances\n",
     "\n",
     "# Compute divergence (net outflow from each bin)\n",
-    "div_flow = divergence(goal_directed_flow, env)\n",
+    "div_flow = divergence(env, goal_directed_flow)\n",
     "\n",
     "print(f\"Flow field shape: {goal_directed_flow.shape}  (edge field)\")\n",
     "print(f\"Divergence shape: {div_flow.shape}  (scalar field)\")\n",
@@ -532,8 +562,8 @@
     "\n",
     "    for _ in range(n_iterations):\n",
     "        # Compute Laplacian: L(f) = div(grad(f))\n",
-    "        grad_field = gradient(smoothed, env)\n",
-    "        laplacian = divergence(grad_field, env)\n",
+    "        grad_field = gradient(env, smoothed)\n",
+    "        laplacian = divergence(env, grad_field)\n",
     "\n",
     "        # Heat equation: f_new = f - alpha * L(f)\n",
     "        smoothed = smoothed - alpha * laplacian\n",
@@ -709,8 +739,8 @@
     "test_field = np.random.randn(env.n_bins)\n",
     "\n",
     "# Our implementation: div(grad(f))\n",
-    "grad_test = gradient(test_field, env)\n",
-    "laplacian_ours = divergence(grad_test, env)\n",
+    "grad_test = gradient(env, test_field)\n",
+    "laplacian_ours = divergence(env, grad_test)\n",
     "\n",
     "# NetworkX Laplacian (weighted by edge distances)\n",
     "# Note: We use weight='distance' to match our weighted differential operator\n",
@@ -890,7 +920,7 @@
    ],
    "source": [
     "# Compute divergence of goal-directed flow\n",
-    "div_policy = divergence(normalized_flow, env)\n",
+    "div_policy = divergence(env, normalized_flow)\n",
     "\n",
     "print(\n",
     "    f\"Divergence at start bin: {div_policy[start_bin]:.3f}  (should be positive - source)\"\n",
