--- a/examples/10_signal_processing_primitives.ipynb
+++ b/examples/10_signal_processing_primitives.ipynb
@@ -93,16 +93,47 @@
     }
    ],
    "source": [
-    "# Create synthetic trajectory (meandering path)\n",
-    "n_samples = 2000\n",
-    "t = np.linspace(0, 10 * np.pi, n_samples)\n",
-    "x = 50 + 40 * np.sin(t) + 10 * np.sin(3 * t)\n",
-    "y = 50 + 40 * np.cos(t) + 10 * np.cos(2 * t)\n",
-    "positions = np.column_stack([x, y])\n",
-    "times = np.linspace(0, 100, n_samples)  # 100 seconds\n",
+    "# Generate 2D random walk in open field arena\n",
+    "sampling_rate = 20.0  # Hz\n",
+    "duration = 100.0  # seconds\n",
+    "n_samples = int(duration * sampling_rate)\n",
+    "times = np.linspace(0, duration, n_samples)\n",
+    "\n",
+    "# Arena size: 100x100 cm open field\n",
+    "arena_size = 100.0  # cm\n",
+    "arena_center = arena_size / 2\n",
+    "\n",
+    "# Random walk parameters\n",
+    "step_size = 2.5  # cm per step\n",
+    "boundary_margin = 5.0  # cm from walls\n",
+    "\n",
+    "# Initialize trajectory\n",
+    "positions = np.zeros((n_samples, 2))\n",
+    "positions[0] = [arena_center, arena_center]  # Start at center\n",
+    "\n",
+    "# Generate random walk with wall reflection\n",
+    "for i in range(1, n_samples):\n",
+    "    # Random step direction\n",
+    "    angle = rng.uniform(0, 2 * np.pi)\n",
+    "    step = step_size * np.array([np.cos(angle), np.sin(angle)])\n",
+    "\n",
+    "    # Propose new position\n",
+    "    new_pos = positions[i - 1] + step\n",
+    "\n",
+    "    # Reflect at boundaries (with margin)\n",
+    "    for dim in range(2):\n",
+    "        if new_pos[dim] < boundary_margin:\n",
+    "            new_pos[dim] = boundary_margin + (boundary_margin - new_pos[dim])\n",
+    "        elif new_pos[dim] > (arena_size - boundary_margin):\n",
+    "            new_pos[dim] = (arena_size - boundary_margin) - (\n",
+    "                new_pos[dim] - (arena_size - boundary_margin)\n",
+    "            )\n",
+    "\n",
+    "    positions[i] = new_pos\n",
     "\n",
     "# Create environment\n",
     "env = Environment.from_samples(positions, bin_size=2.5)\n",
+    "print(f\"Arena: {arena_size:.0f}x{arena_size:.0f} cm open field\")\n",
     "\n",
     "# Generate synthetic spike train with Gaussian place field\n",
     "center = np.array([50.0, 50.0])\n",
@@ -157,7 +188,7 @@
     ")\n",
     "\n",
     "# Compute neighbor average (for coherence)\n",
-    "neighbor_avg = neighbor_reduce(firing_rate, env, op=\"mean\", include_self=False)\n",
+    "neighbor_avg = neighbor_reduce(env, firing_rate, op=\"mean\", include_self=False)\n",
     "\n",
     "# Compute spatial coherence (Pearson correlation)\n",
     "valid = ~np.isnan(firing_rate) & ~np.isnan(neighbor_avg)\n",
@@ -244,12 +275,13 @@
     "axes[2].set_title(f\"Spatial Coherence: {coherence:.3f}\", fontsize=14, weight=\"bold\")\n",
     "axes[2].grid(True, alpha=0.3)\n",
     "\n",
-    "# Add diagonal reference line\n",
-    "max_val = max(firing_rate[valid].max(), neighbor_avg[valid].max())\n",
-    "axes[2].plot(\n",
-    "    [0, max_val], [0, max_val], \"r--\", linewidth=2, label=\"Perfect correlation\"\n",
-    ")\n",
-    "axes[2].legend()\n",
+    "# Add diagonal reference line (if we have valid data)\n",
+    "if valid.sum() > 0:\n",
+    "    max_val = max(firing_rate[valid].max(), neighbor_avg[valid].max())\n",
+    "    axes[2].plot(\n",
+    "        [0, max_val], [0, max_val], \"r--\", linewidth=2, label=\"Perfect correlation\"\n",
+    "    )\n",
+    "    axes[2].legend()\n",
     "\n",
     "plt.show()"
    ]
@@ -287,9 +319,9 @@
    "outputs": [],
    "source": [
     "# Compute local statistics using neighbor_reduce\n",
-    "neighbor_mean = neighbor_reduce(firing_rate, env, op=\"mean\", include_self=False)\n",
-    "neighbor_std = neighbor_reduce(firing_rate, env, op=\"std\", include_self=False)\n",
-    "neighbor_max = neighbor_reduce(firing_rate, env, op=\"max\", include_self=False)\n",
+    "neighbor_mean = neighbor_reduce(env, firing_rate, op=\"mean\", include_self=False)\n",
+    "neighbor_std = neighbor_reduce(env, firing_rate, op=\"std\", include_self=False)\n",
+    "neighbor_max = neighbor_reduce(env, firing_rate, op=\"max\", include_self=False)\n",
     "\n",
     "# Coefficient of variation (normalized variability)\n",
     "epsilon = 1e-6\n",
@@ -449,7 +481,7 @@
     "\n",
     "\n",
     "# Apply box filter\n",
-    "smoothed_occupancy = convolve(binary_occupancy, box_kernel, env, normalize=True)\n",
+    "smoothed_occupancy = convolve(env, binary_occupancy, box_kernel, normalize=True)\n",
     "\n",
     "# Threshold: keep bins with >50% neighbors visited\n",
     "reliable_visited = smoothed_occupancy > 0.5\n",
@@ -607,7 +639,7 @@
     "\n",
     "\n",
     "# Apply Mexican hat (DON'T normalize - breaks edge detection)\n",
-    "edges = convolve(firing_rate_smooth, mexican_hat, env, normalize=False)\n",
+    "edges = convolve(env, firing_rate_smooth, mexican_hat, normalize=False)\n",
     "\n",
     "# Detect place field centers (strong positive responses)\n",
     "threshold_high = np.nanpercentile(edges, 95)\n",
@@ -760,7 +792,7 @@
     "    return np.exp(-(distances**2) / (2 * bandwidth**2))\n",
     "\n",
     "\n",
-    "result_convolve = convolve(random_field, gaussian_kernel, env, normalize=True)\n",
+    "result_convolve = convolve(env, random_field, gaussian_kernel, normalize=True)\n",
     "\n",
     "# Method 2: Built-in smoothing\n",
     "result_smooth = env.smooth(random_field, bandwidth, mode=\"density\")\n",
@@ -895,8 +927,7 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "-all",
-   "formats": "ipynb,py:percent",
-   "main_language": "python"
+   "formats": "ipynb,py:percent"
   },
   "kernelspec": {
    "display_name": "neurospatial",
